; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/kern/extr_misc.c_grub_xvasprintf.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/kern/extr_misc.c_grub_xvasprintf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PREALLOC_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @grub_xvasprintf(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %9 = load i32, i32* @PREALLOC_SIZE, align 4
  store i32 %9, i32* %7, align 4
  br label %10

10:                                               ; preds = %2, %28
  %11 = load i32, i32* %7, align 4
  %12 = add nsw i32 %11, 1
  %13 = call i8* @grub_malloc(i32 %12)
  store i8* %13, i8** %8, align 8
  %14 = load i8*, i8** %8, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %10
  store i8* null, i8** %3, align 8
  br label %32

17:                                               ; preds = %10
  %18 = load i8*, i8** %8, align 8
  %19 = load i32, i32* %7, align 4
  %20 = load i8*, i8** %4, align 8
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @grub_vsnprintf_real(i8* %18, i32 %19, i8* %20, i32 %21)
  store i32 %22, i32* %6, align 4
  %23 = load i32, i32* %6, align 4
  %24 = load i32, i32* %7, align 4
  %25 = icmp sle i32 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %17
  %27 = load i8*, i8** %8, align 8
  store i8* %27, i8** %3, align 8
  br label %32

28:                                               ; preds = %17
  %29 = load i8*, i8** %8, align 8
  %30 = call i32 @grub_free(i8* %29)
  %31 = load i32, i32* %6, align 4
  store i32 %31, i32* %7, align 4
  br label %10

32:                                               ; preds = %26, %16
  %33 = load i8*, i8** %3, align 8
  ret i8* %33
}

declare dso_local i8* @grub_malloc(i32) #1

declare dso_local i32 @grub_vsnprintf_real(i8*, i32, i8*, i32) #1

declare dso_local i32 @grub_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
